# alumni-outreach

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
src/: login.py  merge.py  parse.py  records.py  search.py  send.py  utils.py
