[tool.poetry]
name = "alumni-outreach"
version = "0.1.0"
description = ""
authors = ["Terry <78312274+TerryEmeigh@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.35.0"
dotenv = "^0.9.9"
regex = "^2025.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
